--- a/cart.html
+++ b/cart.html
@@ -127,7 +127,7 @@
                 <input
                   type="text"
                   class="form-control"
-                  id="name"
+                  id="cFname"
                   required
                   pattern="[A-Za-z\s]+"
                 />
@@ -140,7 +140,7 @@
                 <input
                   type="tel"
                   class="form-control"
-                  id="phone"
+                  id="cFphone"
                   required
                   pattern="^\+?[0-9]{10,15}$"
                 />
@@ -150,7 +150,7 @@
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Email Address</label>
-                <input type="email" class="form-control" id="email" required />
+                <input type="email" class="form-control" id="cFemail" required />
                 <div class="invalid-feedback">
                   Please enter a valid email address.
                 </div>
@@ -160,7 +160,7 @@
                 <input
                   type="text"
                   class="form-control"
-                  id="country"
+                  id="cFcountry"
                   required
                   pattern="[A-Za-z\s]+"
                 />
@@ -173,7 +173,7 @@
                 <input
                   type="text"
                   class="form-control"
-                  id="city"
+                  id="cFcity"
                   required
                   pattern="[A-Za-z\s]+"
                 />
@@ -183,14 +183,14 @@
               </div>
               <div class="mb-3">
                 <label for="area" class="form-label">Area</label>
-                <input type="text" class="form-control" id="area" required />
+                <input type="text" class="form-control" id="cFarea" required />
                 <div class="invalid-feedback">
                   Please enter a valid area name.
                 </div>
               </div>
               <div class="mb-3">
                 <label for="street" class="form-label">Street</label>
-                <input type="text" class="form-control" id="street" required />
+                <input type="text" class="form-control" id="cFstreet" required />
                 <div class="invalid-feedback">
                   Please enter a valid street name.
                 </div>
@@ -200,7 +200,7 @@
                 <input
                   type="text"
                   class="form-control"
-                  id="houseNo"
+                  id="cFhouseNo"
                   required
                   pattern="^[0-9a-zA-Z\s]+$"
                 />
@@ -213,7 +213,7 @@
                 <input
                   type="text"
                   class="form-control"
-                  id="zip"
+                  id="cFzip"
                   required
                   pattern="^\d{5}(-\d{4})?$"
                 />
@@ -223,7 +223,7 @@
               </div>
               <div class="mb-3">
                 <label for="comment" class="form-label">Comment</label>
-                <textarea class="form-control" id="comment" rows="3"></textarea>
+                <textarea class="form-control" id="cFcomment" rows="3"></textarea>
               </div>
               <fieldset class="mb-3">
                 <legend>Payment Option</legend>
@@ -231,7 +231,7 @@
                   <input
                     class="form-check-input"
                     type="radio"
-                    name="paymentOption"
+                    name="cFpaymentOption"
                     id="cashOnDelivery"
                     value="cashOnDelivery"
                     checked
