--- a/brands.html
+++ b/brands.html
@@ -79,5 +79,5 @@
 
   <script src="src/js/Brands.js"></script>
   <script src="src/js/cart.js"></script>
-  <script src="src/js/Wishlist.js"></script>
+  <script src="/src/js/wishlist.js"></script>
 </html>
