--- a/compare.html
+++ b/compare.html
@@ -124,5 +124,5 @@
 
   <script src="src/js/Compare.js"></script>
   <script src="src/js/cart.js"></script>
-  <script src="src/js/Wishlist.js"></script>
+  <script src="/src/js/wishlist.js"></script>
 </html>
