--- a/contact.html
+++ b/contact.html
@@ -127,9 +127,8 @@
         referrerpolicy="no-referrer-when-downgrade"
       ></iframe>
     </section>
-<<<<<<< Tabnine <<<<<<<
-undefined+
->>>>>>> Tabnine >>>>>>>undefined {"conversationId":"7451ee6b-5ee3-4246-b70b-0bebdaa84feb","source":"instruct"}
+    <<<<<<< Tabnine <<<<<<< undefined+ >>>>>>> Tabnine >>>>>>>undefined
+    {"conversationId":"7451ee6b-5ee3-4246-b70b-0bebdaa84feb","source":"instruct"}
 
     <!------------ End GoogleMap Section ------------>
 
@@ -147,5 +146,5 @@ undefined+
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <script src="src/js/cart.js"></script>
-  <script src="src/js/Wishlist.js"></script>
+  <script src="/src/js/wishlist.js"></script>
 </html>
