--- a/login.html
+++ b/login.html
@@ -121,5 +121,5 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <script src="src/js/cart.js"></script>
-  <script src="src/js/Wishlist.js"></script>
+  <script src="/src/js/wishlist.js"></script>
 </html>
