--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -93,9 +93,7 @@
           newsletter, we may collect personal details such as:
         </p>
         <ul>
-          <li>
-            <i class="fas fa-user"></i> Name
-          </li>
+          <li><i class="fas fa-user"></i> Name</li>
           <li><i class="fas fa-envelope"></i> Email address</li>
           <li><i class="fas fa-phone"></i> Phone number</li>
           <li><i class="fas fa-credit-card"></i> Billing information</li>
@@ -251,6 +249,6 @@
     <script src="src/js/Login_Signup.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="src/js/cart.js"></script>
-    <script src="src/js/Wishlist.js"></script>
+    <script src="/src/js/wishlist.js"></script>
   </body>
 </html>
