--- a/product-returns.html
+++ b/product-returns.html
@@ -61,34 +61,60 @@
 
         <h2><i class="fas fa-info-circle icon"></i> Introduction</h2>
         <p>
-          At LuxeLiving, we strive to ensure your complete satisfaction with your purchase. If you're not entirely happy with your order, our returns policy is designed to make the return process as smooth and hassle-free as possible.
+          At LuxeLiving, we strive to ensure your complete satisfaction with
+          your purchase. If you're not entirely happy with your order, our
+          returns policy is designed to make the return process as smooth and
+          hassle-free as possible.
         </p>
 
         <h2><i class="fas fa-calendar-alt icon"></i> Return Period</h2>
         <p>
-          You have 30 days from the date of delivery to initiate a return. We kindly ask that items are returned in their original condition, unused, and with all packaging and tags intact.
+          You have 30 days from the date of delivery to initiate a return. We
+          kindly ask that items are returned in their original condition,
+          unused, and with all packaging and tags intact.
         </p>
 
-        <h2><i class="fas fa-arrow-right icon"></i> How to Initiate a Return</h2>
+        <h2>
+          <i class="fas fa-arrow-right icon"></i> How to Initiate a Return
+        </h2>
         <p>To return a product, please follow these steps:</p>
         <ul>
-          <li>Contact our customer service team at <a href="mailto:support@luxeliving.com">support@luxeliving.com</a> to initiate your return.</li>
-          <li>Provide your order number and a brief description of the reason for the return.</li>
-          <li>Our team will guide you through the return process and provide you with a Return Authorization Number (RAN).</li>
-          <li>Carefully package the item in its original packaging, including all accessories, manuals, and documentation.</li>
+          <li>
+            Contact our customer service team at
+            <a href="mailto:support@luxeliving.com">support@luxeliving.com</a>
+            to initiate your return.
+          </li>
+          <li>
+            Provide your order number and a brief description of the reason for
+            the return.
+          </li>
+          <li>
+            Our team will guide you through the return process and provide you
+            with a Return Authorization Number (RAN).
+          </li>
+          <li>
+            Carefully package the item in its original packaging, including all
+            accessories, manuals, and documentation.
+          </li>
           <li>Write the RAN clearly on the outside of the package.</li>
-          <li>Ship the package to the address provided by our customer service team, and keep your shipping receipt for tracking.</li>
+          <li>
+            Ship the package to the address provided by our customer service
+            team, and keep your shipping receipt for tracking.
+          </li>
         </ul>
 
         <h2><i class="fas fa-undo-alt icon"></i> Refund Process</h2>
         <p>
-          Once we receive your returned item, we will inspect it and notify you of the approval or rejection of your refund. If approved, your refund will be processed, and a credit will be applied to your original payment method within 7-10 business days.
+          Once we receive your returned item, we will inspect it and notify you
+          of the approval or rejection of your refund. If approved, your refund
+          will be processed, and a credit will be applied to your original
+          payment method within 7-10 business days.
         </p>
 
-        <h2><i class="fas fa-exclamation-triangle icon"></i> Return Exceptions</h2>
-        <p>
-          Certain items are not eligible for return, including:
-        </p>
+        <h2>
+          <i class="fas fa-exclamation-triangle icon"></i> Return Exceptions
+        </h2>
+        <p>Certain items are not eligible for return, including:</p>
         <ul>
           <li>Gift cards</li>
           <li>Items marked as "final sale"</li>
@@ -96,22 +122,29 @@
           <li>Opened health and personal care products</li>
         </ul>
         <p>
-          If you receive a damaged or defective item, please reach out to us immediately at <a href="mailto:support@luxeliving.com">support@luxeliving.com</a> for assistance.
+          If you receive a damaged or defective item, please reach out to us
+          immediately at
+          <a href="mailto:support@luxeliving.com">support@luxeliving.com</a> for
+          assistance.
         </p>
 
         <h2><i class="fas fa-envelope icon"></i> Contact Us</h2>
         <p>
-          If you have any questions regarding our returns policy, feel free to contact us:
+          If you have any questions regarding our returns policy, feel free to
+          contact us:
         </p>
         <p>
           <strong>LuxeLiving</strong><br />
-          Email: <a href="mailto:support@luxeliving.com">support@luxeliving.com</a><br />
+          Email:
+          <a href="mailto:support@luxeliving.com">support@luxeliving.com</a
+          ><br />
           Phone: (123) 456-7890<br />
           Address: 123 Luxury Lane, Elegant City, ST 12345
         </p>
 
         <p>
-          Thank you for choosing LuxeLiving! We appreciate your understanding and cooperation.
+          Thank you for choosing LuxeLiving! We appreciate your understanding
+          and cooperation.
         </p>
       </div>
     </div>
@@ -124,6 +157,6 @@
     <script src="src/js/Login_Signup.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="src/js/cart.js"></script>
-    <script src="src/js/Wishlist.js"></script>
+    <script src="/src/js/wishlist.js"></script>
   </body>
 </html>
