--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -63,62 +63,89 @@
     <div class="container">
       <div class="terms-section">
         <h1 class="section-header bg-dark text-white text-center py-3">
-          <i class="fas fa-file-contract icon"></i> Terms and Conditions for LuxeLiving
+          <i class="fas fa-file-contract icon"></i> Terms and Conditions for
+          LuxeLiving
         </h1>
 
         <h2><i class="fas fa-info-circle icon"></i> Introduction</h2>
         <p>
-          Welcome to LuxeLiving! These terms and conditions outline the rules and regulations for the use of our website and services. By accessing our site, you accept these terms in full.
+          Welcome to LuxeLiving! These terms and conditions outline the rules
+          and regulations for the use of our website and services. By accessing
+          our site, you accept these terms in full.
         </p>
 
         <h2><i class="fas fa-user-check icon"></i> Eligibility</h2>
         <p>
-          To use our services, you must be at least 18 years old or have parental consent. By using our site, you represent and warrant that you meet these requirements.
+          To use our services, you must be at least 18 years old or have
+          parental consent. By using our site, you represent and warrant that
+          you meet these requirements.
         </p>
 
         <h2><i class="fas fa-gavel icon"></i> User Responsibilities</h2>
-        <p>
-          As a user of our site, you agree to:
-        </p>
+        <p>As a user of our site, you agree to:</p>
         <ul>
-          <li><i class="fas fa-check-circle"></i> Provide accurate information when registering.</li>
-          <li><i class="fas fa-check-circle"></i> Use the site in compliance with all applicable laws.</li>
-          <li><i class="fas fa-check-circle"></i> Not engage in any harmful activities, including spamming or hacking.</li>
+          <li>
+            <i class="fas fa-check-circle"></i> Provide accurate information
+            when registering.
+          </li>
+          <li>
+            <i class="fas fa-check-circle"></i> Use the site in compliance with
+            all applicable laws.
+          </li>
+          <li>
+            <i class="fas fa-check-circle"></i> Not engage in any harmful
+            activities, including spamming or hacking.
+          </li>
         </ul>
 
         <h2><i class="fas fa-lock icon"></i> Intellectual Property</h2>
         <p>
-          All content on this site, including text, graphics, logos, and images, is the property of LuxeLiving and is protected by intellectual property laws. Unauthorized use is prohibited.
+          All content on this site, including text, graphics, logos, and images,
+          is the property of LuxeLiving and is protected by intellectual
+          property laws. Unauthorized use is prohibited.
         </p>
 
-        <h2><i class="fas fa-exclamation-triangle icon"></i> Limitation of Liability</h2>
+        <h2>
+          <i class="fas fa-exclamation-triangle icon"></i> Limitation of
+          Liability
+        </h2>
         <p>
-          LuxeLiving will not be liable for any damages arising from the use or inability to use our services. This includes, but is not limited to, any direct, indirect, incidental, or consequential damages.
+          LuxeLiving will not be liable for any damages arising from the use or
+          inability to use our services. This includes, but is not limited to,
+          any direct, indirect, incidental, or consequential damages.
         </p>
 
         <h2><i class="fas fa-comments icon"></i> Governing Law</h2>
         <p>
-          These terms shall be governed by and construed in accordance with the laws of [Your State/Country], without regard to its conflict of law provisions.
+          These terms shall be governed by and construed in accordance with the
+          laws of [Your State/Country], without regard to its conflict of law
+          provisions.
         </p>
 
         <h2><i class="fas fa-pencil-alt icon"></i> Changes to These Terms</h2>
         <p>
-          We may update our Terms and Conditions periodically. Any changes will be posted on this page with a new effective date. We encourage you to review these terms regularly.
+          We may update our Terms and Conditions periodically. Any changes will
+          be posted on this page with a new effective date. We encourage you to
+          review these terms regularly.
         </p>
 
         <h2><i class="fas fa-envelope icon"></i> Contact Us</h2>
         <p>
-          If you have any questions or concerns regarding these Terms and Conditions, please contact us at:
+          If you have any questions or concerns regarding these Terms and
+          Conditions, please contact us at:
         </p>
         <p>
           <strong>LuxeLiving</strong><br />
-          Email: <a href="mailto:support@luxeliving.com">support@luxeliving.com</a><br />
+          Email:
+          <a href="mailto:support@luxeliving.com">support@luxeliving.com</a
+          ><br />
           Phone: (123) 456-7890<br />
           Address: 123 Luxury Lane, Elegant City, ST 12345
         </p>
 
         <p>
-          Thank you for choosing LuxeLiving! We appreciate your understanding and cooperation.
+          Thank you for choosing LuxeLiving! We appreciate your understanding
+          and cooperation.
         </p>
       </div>
     </div>
@@ -137,6 +164,6 @@
     <script src="src/js/Login_Signup.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="src/js/cart.js"></script>
-    <script src="src/js/Wishlist.js"></script>
+    <script src="/src/js/wishlist.js"></script>
   </body>
 </html>
