--- a/cart.html
+++ b/cart.html
@@ -150,7 +150,12 @@
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Email Address</label>
-                <input type="email" class="form-control" id="cFemail" required />
+                <input
+                  type="email"
+                  class="form-control"
+                  id="cFemail"
+                  required
+                />
                 <div class="invalid-feedback">
                   Please enter a valid email address.
                 </div>
@@ -190,7 +195,12 @@
               </div>
               <div class="mb-3">
                 <label for="street" class="form-label">Street</label>
-                <input type="text" class="form-control" id="cFstreet" required />
+                <input
+                  type="text"
+                  class="form-control"
+                  id="cFstreet"
+                  required
+                />
                 <div class="invalid-feedback">
                   Please enter a valid street name.
                 </div>
@@ -223,7 +233,11 @@
               </div>
               <div class="mb-3">
                 <label for="comment" class="form-label">Comment</label>
-                <textarea class="form-control" id="cFcomment" rows="3"></textarea>
+                <textarea
+                  class="form-control"
+                  id="cFcomment"
+                  rows="3"
+                ></textarea>
               </div>
               <fieldset class="mb-3">
                 <legend>Payment Option</legend>
@@ -285,7 +299,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <script src="src/js/cart.js"></script>
-  <script src="src/js/wishlist.js"></script>
+  <script src="/src/js/wishlist.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       displayCart();
