--- a/wholesale-policy.html
+++ b/wholesale-policy.html
@@ -183,6 +183,6 @@
     <script src="src/js/Login_Signup.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="src/js/cart.js"></script>
-    <script src="src/js/Wishlist.js"></script>
+    <script src="/src/js/wishlist.js"></script>
   </body>
 </html>
