--- a/wishlist.html
+++ b/wishlist.html
@@ -83,7 +83,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <script src="src/js/cart.js"></script>
-  <script src="src/js/Wishlist.js"></script>
+  <script src="/src/js/wishlist.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       console.log("DOMContentLoaded: Wishlist functions initialized.");
