--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 
     <section class="container-fluid">
       <section class="bg-contact">
-        <div class="container-fluid">
+        <div class="container">
           <div class="top-heading">
             <div class="row text-center">
               <div class="section-title">
