--- a/wishlist.html
+++ b/wishlist.html
@@ -38,13 +38,11 @@
     <header id="luxeHeader"></header>
     <!------------ End Header ------------>
 
-    <div class="container-fluid">
-      <div class="row px-5">
-        <div class="col-md-12 py-4" style="background-color: #f1f2f2">
-          <h2 class="text-uppercase">Wishlist</h2>
-        </div>
+    <div class="container">
+      <div class="px-4" style="background-color: #f1f2f2">
+        <h2 class="text-uppercase">Wishlist</h2>
       </div>
-      <div class="row mx-4 pt-5">
+      <div class="row pt-5">
         <div class="col-lg-12 table-responsive mb-5">
           <table
             class="table bg-light table-bordered text-center mb-0 Main-cart"
