--- a/cart.html
+++ b/cart.html
@@ -137,7 +137,7 @@
                 <div class="mb-3">
                   <label for="phone" class="form-label">Phone Number</label>
                   <input
-                    type="tel"
+                    type="number"
                     class="form-control"
                     id="cFphone"
                     required
@@ -225,7 +225,7 @@
                 <div class="mb-3">
                   <label for="zip" class="form-label">Zip Code</label>
                   <input
-                    type="text"
+                    type="number"
                     class="form-control"
                     id="cFzip"
                     required
